; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_tags.c_mp_tags_set_str.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_tags.c_mp_tags_set_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_tags = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_tags_set_str(%struct.mp_tags* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.mp_tags*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.mp_tags* %0, %struct.mp_tags** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.mp_tags*, %struct.mp_tags** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @bstr0(i8* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @bstr0(i8* %10)
  %12 = call i32 @mp_tags_set_bstr(%struct.mp_tags* %7, i32 %9, i32 %11)
  ret void
}

declare dso_local i32 @mp_tags_set_bstr(%struct.mp_tags*, i32, i32) #1

declare dso_local i32 @bstr0(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
